force-app/main/default/objects/AOB_ScreenSection__c/AOB_ScreenSection__c.object-meta.xml
<CustomObject>
    <label>Screen section</label>
    <nameField>
        <label>Screen section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>