force-app/main/default/objects/AOB_ScreenSection__c/fields/AOB_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>AOB_ExternalId__c</fullName>
    <description>External Identifier for data loads purposes</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>