force-app/main/default/objects/AOB_ScreenSection__c/fields/AOB_largeDeviceColumns__c.field-meta.xml
<CustomField>
    <fullName>AOB_largeDeviceColumns__c</fullName>
    <label>large Device Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>