force-app/main/default/objects/AOB_ScreenSection__c/fields/AOB_mediumDeviceColumns__c.field-meta.xml
<CustomField>
    <fullName>AOB_mediumDeviceColumns__c</fullName>
    <inlineHelpText>Indicate the number of columns to show in a medium device</inlineHelpText>
    <label>medium Device Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>