force-app/main/default/objects/AOB_ScreenSection__c/fields/AOB_Rank__c.field-meta.xml
<CustomField>
    <fullName>AOB_Rank__c</fullName>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>