force-app/main/default/objects/AOB_ScreenSection__c/fields/AOB_Screen__c.field-meta.xml
<CustomField>
    <fullName>AOB_Screen__c</fullName>
    <label>Parent Screen</label>
    <referenceTo>AOB_FlowScreen__c</referenceTo>
    <relationshipLabel>Screen sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>