force-app/main/default/objects/AOB_ScreenSection__c/fields/AOB_smallDeviceColumns__c.field-meta.xml
<CustomField>
    <fullName>AOB_smallDeviceColumns__c</fullName>
    <inlineHelpText>Number of columns to show in a small device (Phone for example)</inlineHelpText>
    <label>small Device Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>