force-app/main/default/objects/AOB_ScreenSection__c/fields/AOB_Title__c.field-meta.xml
<CustomField>
    <fullName>AOB_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>